# rust_game

./: .gitignore  Cargo.toml  README.md
assets/: Tilemap.ase  cursor.aseprite  death.aseprite  door.aseprite  door_enter.aseprite  enemy.aseprite  title.aseprite
maps/: level2.txt  level3.txt
src/: button.rs  design.txt  gfx.rs  ground.rs  main.rs  player.rs  story.txt  whoogle
src/assets/: BeepBox-Song.flac  Player.ase  brick.pxo  door.aseprite  mulfok32.pal  spike.pxo  title.aseprite  torch.aseprite
src/maps/: level1.txt  level2.txt  level3.txt  level4.txt  level5.txt  level6.txt  template.txt
