[package]
name = "pastel_platformer"
version = "0.1.0"
authors = ["John Smith"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
rand = "*"

[dependencies.sdl2]
version = "0.34.5"
default-features = false
features = ["ttf","image","gfx","mixer"]
